--- a/public/index.html
+++ b/public/index.html
@@ -28,17 +28,16 @@
 <script src="lib/jquery-1.9.1.min.js"></script>
 <script src="lib/underscore-min.js"></script>
 <script src="lib/backbone-min.js"></script>
-<script src="lib/backbone-validation-min.js "></script>
 <script src="bootstrap/js/bootstrap.js"></script>
 
 <script src="js/app.js"></script>
 <script src="js/views/shell.js"></script>
-<script src="js/views/null.js"></script>
 <script src="js/views/home.js"></script>
 <script src="js/views/contact.js"></script>
 <script src="js/views/employeelist.js"></script>
 <script src="js/views/employeedetails.js"></script>
 <script src="js/views/login.js"></script>
+<script src="js/views/custField.js"></script>
 
 <!-- Uncomment the script below to access the application data using RESTful services. Open model-rest.js and adjust the URL attributes to reflect your URL endpoints. -->
 <script src="js/models/model-rest.js"></script>
