--- a/public/tpl/ShellView.html
+++ b/public/tpl/ShellView.html
@@ -13,9 +13,9 @@
                     <!--li class="home-menu active"><a href="#">Home</a></li>
                     <li class="contact-menu"><a href="#contact">Contact</a></li-->
                 </ul>
-                <!--form class="navbar-search pull-right dropdown">
+                <form class="navbar-search pull-right dropdown">
                     <input id="searchText" type="search" class="search-query dropdown-toggle" placeholder="Search" autocomplete="off">
-                </form-->
+                </form>
             </div>
             <!--/.nav-collapse -->
         </div>
