--- a/public/tpl/LoginView.html
+++ b/public/tpl/LoginView.html
@@ -8,17 +8,17 @@
         </div>
 
         <div class="span5">
-            <p class="text-error"></p>
+            <p class="text-error" id="errLogin"></p>
             <form role="form">
-              <div class="form-group warning">
-                <label for="exampleInputEmail1">User ID</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="User ID">
+              <div class="form-group control-group">
+                <label class="control-label" for="exampleInputEmail1">User ID</label>
+                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="User ID">
               </div>
-              <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
+              <div class="form-group control-group">
+                <label class="control-label" for="exampleInputPassword1">Password</label>
                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
               </div>
-              <span class="help-inline paddBlock btn btn-link">Forgot Password?</span><button type="submit" class="btn btn-primary">Submit</button>
+              <span class="help-inline paddBlock btn btn-link" id="forgot">Forgot Password?</span><button type="submit" class="btn btn-primary" id="login">Submit</button>
             </form>
 
         </div>
