--- a/public/tpl/ShellView.html
+++ b/public/tpl/ShellView.html
@@ -11,8 +11,8 @@
             <div class="nav-collapse collapse">
                 <ul class="nav">
                     <li class="home-menu active"><a href="#">Home</a></li>
+                    <li class="cust-menu"><a href="#custfield" id="custF">Custom Field</a></li>
                     <li class="contact-menu"><a href="#contact">Contact</a></li>
-                    <li class="cust-menu"><a href="#custF" id="custF">Contact</a></li>
                 </ul>
                 <form class="navbar-search pull-right dropdown">
                     <input id="searchText" type="search" class="search-query dropdown-toggle" placeholder="Search" autocomplete="off">
