Changed the custom field’s form id.

--- a/public/tpl/CustFieldView.html
+++ b/public/tpl/CustFieldView.html
@@ -6,7 +6,7 @@
             <hr/>
         </div>
         <div style="text-align: left; display: none; visibility: hidden;" id="addHider">
-            <form method="post" id="submitForm" role="form">
+            <form method="post" id="customFieldForm" role="form">
                 <div class="form-group control-group">
                     <label class="control-label" for="label">Label</label>
                     <input type="text" class="form-control" placeholder="Label" name="lableParam" id="lableParam" value="Twitter Account">
