--- a/public/tpl/CustFieldView.html
+++ b/public/tpl/CustFieldView.html
@@ -22,7 +22,7 @@
             <form method="post" id="customFieldForm" role="form">
                 <div class="form-group control-group">
                     <label class="control-label" for="label">Label</label>
-                    <input type="text" class="form-control" placeholder="Label" name="lableParam" id="lableParam" value="Twitter Account">
+                    <input type="text" class="form-control" placeholder="Label" name="lableParam" id="lableParam" value="">
                     <label class="control-label help-inline" for="label"></label>
                 </div>
                 <div class="form-group control-group">
@@ -42,7 +42,7 @@
                 </div>
                 <div class="form-group control-group" style="vertical-align: top">
                     <label class="control-label" for="label">Value(s)</label>
-                    <input type="text" class="form-control" placeholder="value" style="margin-bottom: 0px;" id="valxx" name="value" value="ChaddyChaddoy">
+                    <input type="text" class="form-control" placeholder="value" style="margin-bottom: 0px;" id="valxx" name="value">
                     <button type="button" style="text-align: right; display: none; visbility:hidden;" class="btn" id="addbutn"><i class="icon-plus"></i>
                     </button>
                     <label class="control-label help-inline" for="label"></label>
