custom field cleanup

--- a/public/tpl/CustFieldView.html
+++ b/public/tpl/CustFieldView.html
@@ -76,3 +76,8 @@
         </div>
     </div>
 </div>
+<div id="template_001" style="display: none; visibility: hidden;">
+    <input value="" type="text">
+    <button class="btn btn-default" style="margin-bottom: 10px;" onclick="$(this).parent().remove()"><i class="icon-minus"></i>
+    </button>
+</div>
