--- a/public/tpl/bfListItemView.html
+++ b/public/tpl/bfListItemView.html
@@ -10,6 +10,6 @@
 <td>
 <%= newValues %>
 </td>
-<td>
+<td style="text-align: right">
 <button class="btn btn-default" id="basicEditer">edit</button>
 </td>
