added helpers for edit basic fields

--- a/public/tpl/CustFieldView.html
+++ b/public/tpl/CustFieldView.html
@@ -1,5 +1,7 @@
 <div class="hero-unit" style="padding-bottom: 20px;">
     <div class="row-fluid" style="text-align: right;">
+        <div class="alert alert-success" style="text-align: left; display: none; visibility: hidden" id="info-basic"></div>
+        <div class="alert alert-error" style="text-align: left; display: none; visibility: hidden" id="error-basic"></div>
         <div style="text-align: left">
             <h2>Basic Fields</h2>
             <table class="table basics table-striped" width=100%>
@@ -15,6 +17,7 @@
             </table>
         </div>
         <div class="alert alert-success" style="text-align: left; display: none; visibility: hidden" id="info"></div>
+        <div class="alert alert-error" style="text-align: left; display: none; visibility: hidden" id="error"></div>
         <div style="form-actions">
             <button style="text-align: right;" class="btn btn-primary" id="clker"><i class="icon-plus"></i> Add Custom Field</button>
             <hr/>
@@ -77,7 +80,7 @@
     </div>
 </div>
 <div id="template_001" style="display: none; visibility: hidden;">
-    <input value="" type="text">
+    <input name="val" value="" type="text">
     <button class="btn btn-default" style="margin-bottom: 10px;" onclick="$(this).parent().remove()"><i class="icon-minus"></i>
     </button>
 </div>
