attached id to edit custom field save object
removed hardcoded routes

--- a/public/tpl/bfEditItemView.html
+++ b/public/tpl/bfEditItemView.html
@@ -1,3 +1,4 @@
+<input type="hidden" name=id value=<%= _id %> />
 <% if(!isMult) { %>
 <input type="text" name="val" value=<%= "\"" + values[0] + "\"" %> />
 <% } else {
