--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
 <script src="lib/underscore-min.js"></script>
 <script src="lib/backbone-min.js"></script>
 <script src="bootstrap/js/bootstrap.js"></script>
+<script src="lib/bootstrap-confirmation.js"></script>
 
 <script src="js/app.js"></script>
 <script src="js/views/shell.js"></script>
