--- a/public/tpl/CustFieldView.html
+++ b/public/tpl/CustFieldView.html
@@ -73,6 +73,7 @@
                         <th width="10%">Type</th>
                         <th width="20">Attribute</th>
                         <th>Value(s)</th>
+                        <th width="5%">&nbsp;</th>
                     </tr>
                 </thead>
             </table>
