delete custom field UI and behavior

--- a/public/tpl/cfListItemView.html
+++ b/public/tpl/cfListItemView.html
@@ -13,15 +13,5 @@
     <%=newValues %>
 </td>
 <td style="text-align: right">
-    <a class="btn btn-danger" data-toggle="confirmation" data-original-title="" title="">delete</a>
-    <div class="popover fade top in" style="top: -44px; left: 74.8px; display: block;">
-        <div class="arrow"></div>
-        <h3 class="popover-title">Are you sure?</h3>
-        <div class="popover-content text-center">
-            <div class="btn-group">
-                <a class="btn btn-small btn-primary" target="_self" href="#">
-                    <a class="btn btn-small" data-dismiss="confirmation">
-            </div>
-        </div>
-    </div>
+    <a class="btn btn-danger" data-toggle="confirmation" id=<%= "'delcust" + _id + "'"%> >delete</a>
 </td>
