fix error message - delete custom field

--- a/public/tpl/CustFieldView.html
+++ b/public/tpl/CustFieldView.html
@@ -65,8 +65,8 @@
             <hr/>
         </div>
         <div style="text-align: left">
-            <div class="alert alert-success" style="text-align: left; display: none; visibility: hidden" id="info-basic"></div>
-            <div class="alert alert-error" style="text-align: left; display: none; visibility: hidden" id="error-basic"></div>
+            <div class="alert alert-success" style="text-align: left; display: none; visibility: hidden" id="info-cust"></div>
+            <div class="alert alert-error" style="text-align: left; display: none; visibility: hidden" id="err-cust"></div>
             <h2>Custom Fields</h2>
             <table class="table customs table-striped" width=100%>
                 <thead>
