--- a/public/tpl/bfListItemView.html
+++ b/public/tpl/bfListItemView.html
@@ -5,7 +5,7 @@
 <%= newType %>
 </td>
 <td>
-<%= isPublicStr %>&nbsp;<%= isRequiredStr %>&nbsp;<%= isEditableStr %>
+    <%= isPublicStr + " " + isRequiredStr + " " +isEditableStr %>
 </td>
 <td>
 <%= newValues %>
