--- a/public/tpl/CustFieldView.html
+++ b/public/tpl/CustFieldView.html
@@ -4,14 +4,14 @@
             <div class="alert alert-success" style="text-align: left; display: none; visibility: hidden" id="info-basic"></div>
             <div class="alert alert-error" style="text-align: left; display: none; visibility: hidden" id="error-basic"></div>
             <h2>Basic Fields</h2>
-            <table class="table basics table-striped" width=100%>
+            <table class="table basics table-striped">
                 <thead>
                     <tr>
-                        <th width="20%">Label</th>
-                        <th width="10%">Type</th>
-                        <th width="20">Attribute</th>
+                        <th>Label</th>
+                        <th>Type</th>
+                        <th>Attribute</th>
                         <th>Value(s)</th>
-                        <th width="5%">&nbsp;</th>
+                        <th>&nbsp;</th>
                     </tr>
                 </thead>
             </table>
@@ -44,7 +44,7 @@
 
                     <label class="control-label help-inline" for="label"></label>
                 </div>
-                <div class="form-group control-group" style="vertical-align: top">
+                <div class="form-group control-group btn-group" style="vertical-align: top">
                     <label class="control-label" for="label">Value(s)</label>
                     <input type="text" class="form-control" placeholder="value" style="margin-bottom: 0px;" id="valxx" name="value">
                     <button type="button" style="text-align: right; display: none; visbility:hidden;" class="btn" id="addbutn"><i class="icon-plus"></i>
@@ -68,14 +68,14 @@
             <div class="alert alert-success" style="text-align: left; display: none; visibility: hidden" id="info-cust"></div>
             <div class="alert alert-error" style="text-align: left; display: none; visibility: hidden" id="err-cust"></div>
             <h2>Custom Fields</h2>
-            <table class="table customs table-striped" width=100%>
+            <table class="table customs table-striped">
                 <thead>
                     <tr>
-                        <th width="20%">Label</th>
-                        <th width="10%">Type</th>
-                        <th width="20">Attribute</th>
+                        <th>Label</th>
+                        <th>Type</th>
+                        <th>Attribute</th>
                         <th>Value(s)</th>
-                        <th width="5%">&nbsp;</th>
+                        <th>&nbsp;</th>
                     </tr>
                 </thead>
             </table>
@@ -83,7 +83,7 @@
     </div>
 </div>
 <div id="template_001" style="display: none; visibility: hidden;">
-    <input name="val" value="" type="text">
+    <input name="val" value="" type="text" style="width: 7em">
     <button class="btn btn-default" style="margin-bottom: 10px;" onclick="$(this).parent().remove()"><i class="icon-minus"></i>
     </button>
 </div>
