--- a/public/tpl/EmployeeListItemView.html
+++ b/public/tpl/EmployeeListItemView.html
@@ -1,4 +1,4 @@
-<a href='#employees/<%= id %>'>
-    <img width="50" height="50" src="pics/<%= firstName %>_<%= lastName %>50.jpg" style="float:left;margin-right: 10px;"/>
-    <p class="list-item"><%= firstName %> <%= lastName %><br /><%= title %></p>
+<a href='profile/<%= field[3].assignedValue[0] %>'>
+    <img width="50" height="50" src="pics/SINet.gif" style="float:left;margin-right: 10px;"/>
+    <p class="list-item"><%= field[0].assignedValue[0] %> <%= field[1].assignedValue[0] %> <br /><span><%= field[2].assignedValue[0] %></span></p>
 </a>
