Implemented Create Account Page UI and behavior.

--- a/public/tpl/CreateAccountView.html
+++ b/public/tpl/CreateAccountView.html
@@ -3,7 +3,7 @@
     <div style="text-align: left">
       <h2>Create Account</h2>
 
-      <form id="createAccount" method="post">
+      <form class="createAccount" method="post">
       
         <table class="table table-basic">
           <thead>
@@ -22,8 +22,8 @@
         </table>
 
         <div class="actions pull-right">
-          <button type="submit" class="btn btn-primary" style="margin-right: 10px;">Submit & Close</button>
-          <button type="submit" class="btn" id="login">Submit</button>
+          <button type="submit" class="btn btn-primary formAction" id="saveAndClose" style="margin-right: 10px;">Submit & Close</button>
+          <button type="submit" class="btn formAction" id="save">Submit</button>
         </div>
 
       </form>
