--- a/public/tpl/FormFieldListItemView.html
+++ b/public/tpl/FormFieldListItemView.html
@@ -8,7 +8,7 @@
   {
     case 1:
 %>
-  <input type="text" name="<%= fieldName %>" placeholder="<%= label %>" class="<%= required %>" />
+  <input type="<%= (label.toLowerCase() === 'password') ? 'password' : 'text' %>" name="<%= fieldName %>" placeholder="<%= label %>" class="<%= required %>" />
 <%
       break;
       
@@ -42,6 +42,7 @@
       break;
       
     case 5:
+      var i = 0;
       values.forEach(function(value) {
 %>
   <label class="checkbox">
@@ -55,5 +56,5 @@
 %>
   <br />
 
-  <span class="help-block hidden"></span>
+  <span class="help-block"></span>
 </td>
