--- a/public/tpl/FormFieldListItemView.html
+++ b/public/tpl/FormFieldListItemView.html
@@ -1,14 +1,15 @@
+<% if(label.toLowerCase().indexOf('password') === -1) { %>
 <td><%= label %>:</td>
 <td>
 
 <%
-  var required = isRequired ? 'required' : '';
+  var required      = isRequired ? 'required' : '';
 
   switch(fieldType)
   {
     case 1:
 %>
-  <input type="<%= (label.toLowerCase() === 'password') ? 'password' : 'text' %>" name="<%= fieldName %>" placeholder="<%= label %>" class="<%= required %>" />
+  <input type="text" name="<%= fieldName %>" placeholder="<%= label %>" class="<%= required %>" value="Chaddoy" />
 <%
       break;
       
@@ -21,6 +22,7 @@
     case 3:
 %>
   <select name="<%= fieldName %>" class="<%= required %>">
+    <!-- <option value=""></option> -->
   <%
     values.forEach(function(value) {
   %>
@@ -44,12 +46,14 @@
     case 5:
       var i = 0;
       values.forEach(function(value) {
+        if(value) {
 %>
   <label class="checkbox">
-    <input type="checkbox" name="<%= fieldName %>" value="<%= value %>" class="<%= required %>" />
+    <input type="checkbox" name="<%= fieldName %>[]" value="<%= value %>" class="<%= required %>" />
     <%= value %>
   </label>
 <%
+        }
       });
       break;
   }
@@ -58,3 +62,4 @@
 
   <span class="help-block"></span>
 </td>
+<% } %>
