consolidated final fix for custom fields

--- a/public/tpl/cfListItemView.html
+++ b/public/tpl/cfListItemView.html
@@ -7,7 +7,7 @@
 <td>
     <%= isPublicStr + " " + isRequiredStr + " " +isEditableStr %>
 </td>
-<td class="valx">
+<td class="valx form-group control-group">
     <%=newValues %>
 </td>
 <td style="text-align: right">
