--- a/public/tpl/bfListItemView.html
+++ b/public/tpl/bfListItemView.html
@@ -7,7 +7,7 @@
 <td>
     <%= isPublicStr + " " + isRequiredStr + " " +isEditableStr %>
 </td>
-<td>
+<td class="form-group control-group">
 <%= newValues %>
 </td>
 <td style="text-align: right">
