Fixed the Validation behavior.

--- a/public/tpl/CreateAccountView.html
+++ b/public/tpl/CreateAccountView.html
@@ -21,6 +21,10 @@
           </thead>
         </table>
 
+        <div>
+          <span style="color: #b94a48; font-size: 14px;">Asterisk ( * ) denotes required field.</span>
+        </div>
+
         <div class="actions pull-right">
           <button type="submit" class="btn btn-primary formAction" id="saveAndClose" style="margin-right: 10px;">Submit & Close</button>
           <button type="submit" class="btn formAction" id="save">Submit</button>
