--- a/public/tpl/ModalView.html
+++ b/public/tpl/ModalView.html
@@ -1,8 +1,8 @@
 <div id="modal" style="position: absolute; z-index: 9999; width: 100%; height: 100%; padding-top: 150px; border: none;">
   <div style="width: 500px; font-size: 18px; border-radius: 10px; -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1); box-shadow: 0 1px 10px rgba(0,0,0,0.1); padding: 30px 40px; margin: auto; background-color: #dff0d8; border-color: #d6e9c6; color: #468847;">
     <a class="close closeModal" style="color: rgb(0, 136, 204);">×</a>
-    <h2><%= main %></h2>
-    <%= note %>
+    <h2><%- main %></h2>
+    <%- note %>
   </div>
 </div>
 
