--- a/public/v2/index.html
+++ b/public/v2/index.html
@@ -1,29 +1,36 @@
-<!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js">
-<!--<![endif]-->
+<!DOCTYPE html>
+<html>
 
 <head>
-
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Global Zeal Employee Directory</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="../bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="../css/styles.css" rel="stylesheet">
 
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 
-
-    <!-- build:js scripts/vendor/modernizr.js -->
-    <script src="Y/modernizr/modernizr.js"></script>
-    <!-- endbuild -->
+    <script src="http://use.edgefonts.net/source-sans-pro.js"></script>
 
 </head>
 
 <body>
+
+    <div class="container">
+        <div class="row-fluid">
+            <div id="content" class="span12>"></div>
+        </div>
+    </div>
+
+    <script src="../lib/jquery-1.9.1.min.js"></script>
+    <script src="../lib/underscore-min.js"></script>
+    <script src="../lib/backbone-min.js"></script>
+    <script src="../bootstrap/js/bootstrap.js"></script>
+    <script src="../lib/bootstrap-confirmation.js"></script>
 
     <!-- build:js scripts/main.js -->
     <script data-main="scripts/init" src="Y/requirejs/require.js"></script>
@@ -32,6 +39,7 @@
     <script>
     document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"><\/script>');
     </script>
+
 </body>
 
 </html>
