View Profile for Admin (1126) 	- Added a view named profile.js 	- Added a template named ProfileView.html 	- Added a new field in userSchema named token. 	- Added a new backbone model named directory.Profile for fetching user infos. 	- Modified the respond of /profileTest route.

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
     <script src="js/views/custField.js"></script>
     <script src="js/views/createAccount.js"></script>
     <script src="js/views/modal.js"></script>
+    <script src="js/views/profile.js"></script>
 
     <!-- Uncomment the script below to access the application data using RESTful services. Open model-rest.js and adjust the URL attributes to reflect your URL endpoints. -->
     <script src="js/models/model-rest.js"></script>
